[package]
name = "hid-hdr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skyline-web = { git = "https://github.com/skyline-rs/skyline-web", optional = true }

[features]
warnings = ["skyline-web"]
